--- a/recipes/cucumberMojito.html
+++ b/recipes/cucumberMojito.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Basil-Cucumber Mojito Recipe</h1>
-    <img src="" alt="Cucumber Mojito">
+    <img src="https://www.allrecipes.com/thmb/GH94_bXo7UragC2YaEK268QI_to=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1233479-c255aa65a5df465ea16f5c64ea6e4419.jpg" alt="Cucumber Mojito">
     <h2>Description</h2>
     <p>I love mojitos, but sometimes I am just not feeling the mint. Luckily, this is a great alternative that brings together the complex aromatic flavor of basil and the cool, refreshing splash of a cucumber.</p>
     <h3>Ingredients</h3>
